--- a/.github/workflows/pr_sandbox.yml
+++ b/.github/workflows/pr_sandbox.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   sandbox:
-    name: Create sandbox
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create sandbox
-        run: echo "Hello world"
+    - name: Extract branch name
+    shell: bash
+    run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+    id: extract_branch
