--- a/.github/workflows/pr_sandbox.yml
+++ b/.github/workflows/pr_sandbox.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   sandbox:
-    name: Extract branch name
-    shell: bash
-    run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-    id: extract_branch
+    steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
