feat: Update permissions for github action

--- a/.github/workflows/pr_sandbox.yml
+++ b/.github/workflows/pr_sandbox.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Add comment
+        permissions: write-all
         uses: mshick/add-pr-comment@v1
         with:
           message: |
