--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -1,5 +1,5 @@
 {
-  "template": "create-react-app",
+  "template": "docusaurus",
   "infiniteLoopProtection": true,
   "node": "16",
   "hardReloadOnChange": true,
