--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -3,9 +3,7 @@
   "infiniteLoopProtection": true,
   "node": "14",
   "hardReloadOnChange": true,
-  "port": 3000,
   "container": {
-    "node": "14",
-    "port": 3000
+    "node": "14"
   }
 }
