feat: Add PR target in yml

--- a/.github/workflows/pr_sandbox.yml
+++ b/.github/workflows/pr_sandbox.yml
@@ -1,11 +1,9 @@
 name: Create sandbox for PR
 
 on:
-  pull_request:
+  [pull_request, pull_request_target]:
     branches:
       - main
-
-permissions: write-all
 
 jobs:
   sandbox:
